--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
   "author": "Edgar Zavala <ezavile@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server",
+    "build": "webpack-dashboard -- webpack --env production",
+    "start": "webpack-dev-server --env development",
     "tslint": "tslint",
     "lint:ts": "npm run tslint \"src/**/*.{ts,tsx}\"",
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint": "npm run lint:css && npm run lint:ts"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "0.1.16",
     "css-loader": "0.28.0",
+    "extract-text-webpack-plugin": "2.1.0",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.28.0",
     "light-ts-loader": "1.1.2",
     "postcss-cssnext": "2.10.0",
     "postcss-loader": "1.3.3",
     "postcss-modules": "0.6.4",
-    "postcss-typescript-css": "0.1.2",
+    "postcss-typescript-css": "0.2.0",
     "source-map-loader": "0.2.1",
     "style-loader": "0.16.1",
     "stylelint": "7.10.1",
@@ -33,7 +36,8 @@
     "typescript": "2.3.1",
     "webpack": "2.4.1",
     "webpack-dashboard": "0.4.0",
-    "webpack-dev-server": "2.4.5"
+    "webpack-dev-server": "2.4.5",
+    "webpack-merge": "4.1.0"
   },
   "dependencies": {
     "@types/react": "15.0.23",
