--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postcss-typescript-css-example",
-  "version": "0.2.0",
+  "version": "0.0.0-development",
   "description": "How to use postcss-typescript-css plugin with webpack 2, React, TypeScript and PostCSS",
   "main": "src/index.tsx",
   "repository": "git@github.com:ezavile/postcss-typescript-css-example.git",
@@ -8,7 +8,9 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack-dashboard -- webpack --env production",
-    "start": "webpack-dev-server --env development",
+    "server": "node server.js",
+    "start": "npm run server",
+    "start:dev": "webpack-dev-server --env development",
     "tslint": "tslint",
     "lint:ts": "npm run tslint \"src/**/*.{ts,tsx}\"",
     "lint:css": "stylelint \"src/**/*.css\"",
@@ -42,6 +44,7 @@
   "dependencies": {
     "@types/react": "15.0.23",
     "@types/react-dom": "15.5.0",
+    "express": "4.15.2",
     "react": "15.5.4",
     "react-dom": "15.5.4"
   }
